# RAG_ChatBot

./: .coverage  .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .secrets.baseline  AGENT.md  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SKILLS.md  USER_MANUAL.md  app.py  cliff.toml  db.py  local_llm.py  pyproject.toml  requirements-dev.txt  requirements.txt  vector_functions.py
.opencode/skills/document-ingestion/: SKILL.md
.opencode/skills/gemini-prompting/: SKILL.md
.opencode/skills/rag-retrieval/: SKILL.md
.opencode/skills/sqlite-persistence/: SKILL.md
.opencode/skills/streamlit-ui/: SKILL.md
.specify/memory/: constitution.md
.specify/templates/: bug.md  plan-template.md  spec-template.md  task.md  tasks-template.md
specs/: pre-commit-setup.md  rag-workflow.md
specs/pre-commit-setup/: plan.md  spec.md  tasks.md
specs/rag-workflow/: plan.md  spec.md  tasks.md
tests/: test_db.py  test_vector_functions.py
