[project]
name = "rag-chatbot"
version = "1.0.0"
description = "Local-First Document Q&A with RAG"
requires-python = ">=3.10"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]
ignore = ["E731"]

[tool.ruff.format]
preview = true

[tool.pyrefly]
project-excludes = ["**/tests", "**/__pycache__", "**/.venv", "**/persist"]
ignore-missing-imports = ["pytesseract.*"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
follow_imports = "skip"
warn_unused_ignores = true
disallow_untyped_defs = false
check_untyped_defs = true
exclude = ["tests/"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["app.py", "db.py", "vector_functions.py", "local_llm.py"]
relative_files = true

[tool.coverage.report]
fail_under = 0
